# casamonitor

./: Makefile.am  README.md  configure.ac  flows.json  platformio.ini
.github/workflows/: c-cpp.yml  configure
include/: Makefile.am  buff_atomic.hpp  pinout.h  regbit.h  timers.hpp  uint8t.h  usart.h
src/: Makefile.am  buff_atomic.cpp  main.cpp  timers.cpp  uint8t.c  usart.c
